[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/DogWalking/tileset.png" type="Texture" id=1]
[ext_resource path="res://Scenes/DogWalking/Actors/PlayerAndDog.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/DogWalking/DogWalking.gd" type="Script" id=3]
[ext_resource path="res://Scenes/DogWalking/Actors/Raindrop.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/DogWalking/glasgowuni_rainyday.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 6.17931, -128, 0, 0, 0, 0, 2253.68, -128 )
}

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 80, 0, 80, 80, 0, 80 )

[sub_resource type="TileSet" id=3]
0/name = "tileset.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 80, 80 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.415686, 0.74902, 0.752941, 1 )
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=5]
size = 21
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 33
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 21
font_data = ExtResource( 6 )

[node name="DogWalking" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 2241.0, 0.0 ]
}
Raindrop = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = -304.0
margin_right = 2252.0
margin_bottom = 563.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 483, 181 )
z_index = 1
gravity = 1500.0

[node name="RainSpawn" type="Path2D" parent="."]
position = Vector2( -5.89474, -128 )
scale = Vector2( 0.953947, 1 )
curve = SubResource( 1 )

[node name="RaindropPosition" type="PathFollow2D" parent="RainSpawn"]
position = Vector2( 6.17931, -128 )

[node name="TileMap" type="TileMap" parent="."]
z_index = 1
tile_set = SubResource( 3 )
cell_size = Vector2( 80, 80 )
collision_use_kinematic = true
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196580, 0, 0, -196579, 0, 0, -196578, 0, 0, -196577, 0, 0, -196576, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131044, 0, 0, -131043, 0, 0, -131042, 0, 0, -131041, 0, 0, -131040, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 131103, 0, 0, 131104, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0 )

[node name="Timer" type="Timer" parent="."]

[node name="StartupDelay" type="Timer" parent="."]
one_shot = true

[node name="RainTimer" type="Timer" parent="."]
wait_time = 0.02

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
margin_left = 694.0
margin_top = 31.0
margin_right = 986.0
margin_bottom = 54.0
custom_styles/fg = SubResource( 4 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 32.0
margin_top = 28.0
margin_right = 483.0
margin_bottom = 87.0
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ready" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 447.5
margin_top = 200.857
margin_right = 596.5
margin_bottom = 267.857
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Ready?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dryness" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 584.0
margin_top = 28.0
margin_right = 712.0
margin_bottom = 67.0
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Dryness:"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="StartupDelay" to="." method="_on_StartupDelay_timeout"]
[connection signal="timeout" from="RainTimer" to="." method="_on_RainTimer_timeout"]
[connection signal="changed" from="CanvasLayer/ProgressBar" to="." method="_on_ProgressBar_changed"]
